--- a/index.html
+++ b/index.html
@@ -704,8 +704,10 @@
           </a>
         </div>
       </div>
-      <img src="/api/placeholder/400/320" alt="Monezy App Preview" class="header-image">
-    </div>
+<a href="#" class="button secondary">
+            <span class="button-icon">📲</span>
+            App Preview
+          </a>    </div>
   </header>
 
   <section id="how-it-works">
