--- a/index.html
+++ b/index.html
@@ -702,12 +702,13 @@
             <span class="button-icon">📲</span>
             Get it on Google Play
           </a>
-        </div>
-      </div>
-<a href="#" class="button secondary">
+          <a href="preview.html" class="button secondary">
             <span class="button-icon">📲</span>
             App Preview
-          </a>    </div>
+          </a> 
+        </div>
+      </div>
+   </div>
   </header>
 
   <section id="how-it-works">
