--- a/index.html
+++ b/index.html
@@ -916,17 +916,16 @@
           <div class="footer-links">
             <a href="#" class="footer-link">About</a>
             <a href="#" class="footer-link">Blog</a>
-            <a href="#" class="footer-link">Careers</a>
+            <a href="#" class="footer-link">Terms</a>
             <a href="#" class="footer-link">Contact</a>
           </div>
         </div>
         <div>
-          <h4 class="footer-heading">Legal</h4>
+          <h4 class="footer-heading">Calculator</h4>
           <div class="footer-links">
-            <a href="#" class="footer-link">Terms</a>
-            <a href="#" class="footer-link">Privacy</a>
-            <a href="#" class="footer-link">Cookies</a>
-            <a href="#" class="footer-link">Licenses</a>
+            <a href="taxcalculator.html" class="footer-link">Tax Calculator</a>
+            <a href="#" class="footer-link">Home Loan Calculator</a>
+           
           </div>
         </div>
       </div>
