--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@
           <h4 class="footer-heading">Calculator</h4>
           <div class="footer-links">
             <a href="taxcalculator.html" class="footer-link">Tax Calculator</a>
-            <a href="#" class="footer-link">Home Loan Calculator</a>
+            <a href="home-loan-calculator.html" class="footer-link">Home Loan Calculator</a>
            
           </div>
         </div>
