--- a/index.html
+++ b/index.html
@@ -925,6 +925,8 @@
           <div class="footer-links">
             <a href="taxcalculator.html" class="footer-link">Tax Calculator</a>
             <a href="home-loan-calculator.html" class="footer-link">Home Loan Calculator</a>
+            <a href="eal-return-calculator.html" class="footer-link">Investment Return Calculator</a>
+            r
            
           </div>
         </div>
