--- a/gen_summary.html
+++ b/gen_summary.html
@@ -119,7 +119,7 @@
         function submitRequest() {
             const newsUrl = document.getElementById('newsUrl').value;
             const apiToken = document.getElementById('apiToken').value;
-            const apiUrl = `http://3.6.1.89/news/summary?news_source=${encodeURIComponent(newsUrl)}`;
+            const apiUrl = `https://3.6.1.89/news/summary?news_source=${encodeURIComponent(newsUrl)}`;
             const responseDiv = document.getElementById('response');
             responseDiv.innerHTML = '<p class="loading">Processing your request...</p>';
             responseDiv.className = ''; // Remove any previous error class
