--- a/index.html
+++ b/index.html
@@ -926,6 +926,7 @@
             <a href="taxcalculator.html" class="footer-link">Tax Calculator</a>
             <a href="home-loan-calculator.html" class="footer-link">Home Loan Calculator</a>
             <a href="real-return-calculator.html" class="footer-link">Investment Return Calculator</a>
+            <a href="ppf-calculator.html" class="footer-link">PPF Calculator</a>
             
            
           </div>
