--- a/index.html
+++ b/index.html
@@ -927,6 +927,7 @@
             <a href="home-loan-calculator.html" class="footer-link">Home Loan Calculator</a>
             <a href="real-return-calculator.html" class="footer-link">Investment Return Calculator</a>
             <a href="ppf-calculator.html" class="footer-link">PPF Calculator</a>
+            <a href="gratuity-calculator.html" class="footer-link">Gratuity Calculator</a>
             
            
           </div>
