--- a/gen_summary.html
+++ b/gen_summary.html
@@ -119,7 +119,7 @@
         function submitRequest() {
             const newsUrl = document.getElementById('newsUrl').value;
             const apiToken = document.getElementById('apiToken').value;
-            const apiUrl = `https://3.6.1.89/news/summary?news_source=${encodeURIComponent(newsUrl)}`;
+            const apiUrl = `https://3.6.1.89/api/v1/summarize`;
             const responseDiv = document.getElementById('response');
             responseDiv.innerHTML = '<p class="loading">Processing your request...</p>';
             responseDiv.className = ''; // Remove any previous error class
@@ -130,7 +130,8 @@
                     'Authorization': apiToken,
                     'Accept': 'application/json',
                     'Content-Type': 'application/json'
-                }
+                },
+                body: JSON.stringify({ url: newsUrl })
             })
             .then(response => {
                 if (!response.ok) {
@@ -143,8 +144,11 @@
             })
             .then(data => {
                 responseDiv.innerHTML = `
-                    <div class="summary-title">${data.title}</div>
-                    <div class="summary-content">${data.summary}</div>
+                    <div style="border: 1px solid #ccc; border-radius: 8px; padding: 20px; background-color: #f9f9f9; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
+                        <div class="summary-title" style="color: #007bff;"><i><b>Article Title:</b></i>   ${data.title}</div>
+                        <div class="summary-title" style="color: #28a745;"><i><b>Generated Title:</b></i>   ${data.gen_title}</div>
+                        <div class="summary-content"><i><b>Summary</b></i>:  ${data.summary}</div>
+                    </div>
                 `;
             })
             .catch(error => {
